# kissra

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
benchmarks/: CMakeLists.txt
benchmarks/src/: benchmarks.cpp  filter_stress.cpp  front_vs_advance.cpp  front_vs_nth.cpp  num_to_string.cpp
examples/: CMakeLists.txt  main.cpp
include/kissra/: all_view.hpp  compose.hpp  concepts.hpp  custom_mixins_fwd.hpp  drop_iter.hpp  drop_last_iter.hpp  drop_last_view.hpp  drop_last_while_iter.hpp  drop_last_while_view.hpp  drop_view.hpp  drop_while_iter.hpp  drop_while_view.hpp  filter_iter.hpp  filter_view.hpp  kissra.hpp  misc.hpp  optional.hpp  ranges_traits.hpp  registered_mixins_fwd.hpp  reverse_view.hpp  transform_iter.hpp  transform_view.hpp  type_traits.hpp
include/kissra/algo/: apply_mixin.hpp  back_mixin.hpp  collect_mixin.hpp  empty_mixin.hpp  find_mixin.hpp  front_mixin.hpp  size_mixin.hpp  ssize_mixin.hpp
include/kissra/fn/: cmp.hpp  convert.hpp  member.hpp  misc.hpp  num.hpp  proj.hpp
include/kissra/impl/: compose.hpp  custom_mixins.hpp  export.hpp  into_iter.hpp  registration_macro.hpp
include/kissra/impl/algo/: apply_mixin.hpp  back_mixin.hpp  collect_mixin.hpp  empty_mixin.hpp  find_mixin.hpp  front_mixin.hpp  ssize_mixin.hpp
include/kissra/impl/iter/: all_iter.hpp  chunk_iter.hpp  drop_iter.hpp  drop_last_iter.hpp  drop_last_while_iter.hpp  drop_while_iter.hpp  filter_iter.hpp  iter_base.hpp  keys_iter.hpp  members_iter.hpp  reverse_iter.hpp  take_iter.hpp  transform_iter.hpp  values_iter.hpp  zip_iter.hpp
include/kissra/iter/: all_iter.hpp  chunk_iter.hpp  drop_iter.hpp  drop_last_iter.hpp  drop_last_while_iter.hpp  drop_while_iter.hpp  filter_iter.hpp  iter_base.hpp  members_iter.hpp  reverse_iter.hpp  transform_iter.hpp  zip_iter.hpp
include/kissra/misc/: functional.hpp  fwd.hpp  into_iter.hpp  optional.hpp  static_string.hpp  type_list.hpp  utility.hpp
include/kissra/mixin/: advance_mixin.hpp  collect_mixin.hpp  size_mixin.hpp  ssize_mixin.hpp
src/kissra/: beman.cppm  kissra.cppm
tests/: CMakeLists.txt
tests/include/kissra/: doctest_printers.hpp  noisy.hpp
tests/src/: benchmark.cpp  benchmarks.cpp  chunk.cpp  collect.cpp  compose.cpp  convert.cpp  custom_mixin.cpp  drop.cpp  drop_while.cpp  empty.cpp  filter.cpp  find.cpp  functional.cpp  iter_chains.cpp  keys.cpp  member.cpp  members.cpp  size.cpp  sizeof.cpp  take.cpp  transform.cpp  values.cpp  view_chains.cpp  zip.cpp
